# NextBerryfrog

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
daemon/: CMakeLists.txt
daemon/include/: daemon.hpp  log.hpp  mysql.hpp
daemon/resource/config/: next-berryfrog.conf
daemon/resource/systemd/: next-berryfrog.service
daemon/source/: daemon.cpp  main.cpp  mysql.cpp
